--- a/faq-accordion-main/styles.css
+++ b/faq-accordion-main/styles.css
@@ -23,3 +23,20 @@ p {
 width: 600px;
 background-color: white;
 }
+
+.background-image{
+  width: 100%;
+  height: 40vh;
+  background-image: url('./assets/images/background-pattern-desktop.svg');
+  background-size: cover;
+  background-repeat: no-repeat;
+}
+
+body{
+  background-color: #f8ebfe;
+}
+
+html, body {
+  margin: 0;
+  padding: 0;
+}
